Remove redundant CI=true export - CircleCI sets this automatically

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,15 +23,15 @@ commands:
           command: |
             # Install required tools
             brew install shellcheck
-            
+
             # Set up environment variables consistently
             export ZDOTDIR="${HOME}"
             export ANTIDOTE_HOME="${HOME}/.antidote"
-            
+
             # Create necessary directories first
             mkdir -p "${ZDOTDIR}"
             mkdir -p "${ANTIDOTE_HOME}"
-            
+
             # Create .zsh_plugins.txt in the correct location
             if [[ ! -f "${ZDOTDIR}/.zsh_plugins.txt" ]]; then
                 echo "Creating .zsh_plugins.txt in ${ZDOTDIR}"
@@ -49,11 +49,11 @@ commands:
             PLUGINS_EOF
                 echo "Created .zsh_plugins.txt successfully"
             fi
-            
+
             # Verify the file exists and show its location
             echo "Checking for .zsh_plugins.txt..."
             ls -la "${ZDOTDIR}/.zsh_plugins.txt" || echo "File not found!"
-            
+
             # Generate and modify CI setup script
             chmod +x ci_modifiers.sh
             zsh ./ci_modifiers.sh
@@ -72,14 +72,14 @@ commands:
             export ZCOMPDUMP="${ZCOMPCACHE}/zcompdump"
             export ANTIDOTE_HOME="${HOME}/.antidote"
             export ZDOTDIR="${HOME}"
-            
+
             # Verify plugins file exists before setup
             echo "Before setup - checking for plugins file:"
             ls -la "${ZDOTDIR}/.zsh_plugins.txt" || echo "Plugins file missing before setup!"
-            
+
             mkdir -p "${COMPLETION_DIR}"
             mkdir -p "${ZCOMPCACHE}"
-            zsh ./ci_setup.sh
+            zsh ./ci_setup.sh 2>&1 | tee /tmp/circleci-build.log
 
   run_verification:
     description: "Run the verification script"
@@ -94,30 +94,30 @@ commands:
             export ZCOMPDUMP="${ZCOMPCACHE}/zcompdump"
             export ANTIDOTE_HOME="${HOME}/.antidote"
             export ZDOTDIR="${HOME}"
-            
+
             # Verify plugins file exists before verification
             echo "Before verification - checking for plugins file:"
             ls -la "${ZDOTDIR}/.zsh_plugins.txt" || echo "Plugins file missing before verification!"
             cat "${ZDOTDIR}/.zsh_plugins.txt" || echo "Cannot read plugins file!"
-            
+
             # Create necessary directories
             mkdir -p "${COMPLETION_DIR}"
             mkdir -p "${ZCOMPCACHE}"
-            
+
             # Initialize zsh completion system (zsh-specific commands)
             autoload -Uz compinit
             compinit -d "${ZCOMPDUMP}"
             fpath=("${COMPLETION_DIR}" $fpath)
-            
+
             # Load antidote if available
             if [[ -e "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh" ]]; then
                 source "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh"
                 antidote load "${ZDOTDIR}/.zsh_plugins.txt"
             fi
-            
+
             # Source zshrc
             source "${ZDOTDIR}/.zshrc" || { echo "Failed to source ${ZDOTDIR}/.zshrc"; exit 1; }
-            
+
             # Run verification script with output redirection
             ./verify_setup.sh 2>&1 | tee verify.log
 
