feat: Integrate mcp_manager.sh and enhance CI Docker handling
- Delegate MCP setup and testing to mcp_manager.sh in setup.sh and verify_setup.sh.

- Resolve JSON parsing for varied MCP server outputs, including preamble and concatenated responses.

- Improve API token detection (GITHUB_TOKEN fallback) and usage for advanced MCP tests.

- Enhance CI: Explicit Docker/Colima install in setup.sh and robust daemon check/start in verify_setup.sh.

- Refactor Zsh array population in mcp_manager.sh to use while-read loops for shfmt compatibility and functional correctness.

- Ensure all pre-commit checks (shellcheck, shfmt, yamllint, etc.) pass.

--- a/mcp_server_registry.yml
+++ b/mcp_server_registry.yml
@@ -15,7 +15,7 @@ servers:
       - "GITHUB_PERSONAL_ACCESS_TOKEN"
       - "GITHUB_TOKEN"
     health_test:
-      parse_mode: "direct"
+      parse_mode: "filter_json"
       timeout: 30
     capabilities:
       - "repository_management"
