ci: collect Colima startup logs as CircleCI artifacts for troubleshooting - Add artifact step to .circleci/config.yml to store /colima-logs; enables download and inspection of Colima QEMU/VZ/local startup logs on pipeline failure

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,3 +114,9 @@ jobs:
       - store_artifacts:
           path: /tmp/circleci-build.log
           destination: build_log
+      - store_artifacts:
+          path: /tmp/colima_start_qemu.log
+          destination: colima_start_qemu.log
+      - store_artifacts:
+          path: /tmp/colima_start_vz.log
+          destination: colima_start_vz.log
