--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -31,197 +31,81 @@ env:
   clone_script:
     - git clone $CIRRUS_REPO_CLONE_URL .
 
-# Template for shellcheck validation
-.shellcheck_template: &shellcheck_template
-  shellcheck_script:
+# Template for installing Homebrew
+.install_homebrew_template: &install_homebrew_template
+  install_homebrew_script:
     - |
-      # Install Homebrew if needed
-      if ! command -v brew &>/dev/null; then
-        /bin/bash -c "$(curl -fsSL \
-          https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        [[ "$(uname -m)" == "arm64" ]] && \
-          eval "$(/opt/homebrew/bin/brew shellenv)"
-      fi
-
-      # Install ShellCheck
-      brew install shellcheck
-
-      # Validate shell scripts
-      shellcheck -s bash \
-        --external-sources \
-        --source-path=SCRIPTDIR \
-        --source-path="${PWD}/lib" \
-        --source-path="${HOME}" \
-        --exclude=SC1091,SC2296,SC2034,SC2154,SC2016 \
-        ci_modifiers.sh setup.sh verify_setup.sh
-
-# Template for system information (only used in daily validation)
-.system_info_template: &system_info_template
-  system_info_script:
-    - |
-      # Display system information for debugging
-      echo "=== System Information ==="
-      uname -a
-      sw_vers
-      echo "Shell: $SHELL"
-      echo "ZSH version: $(zsh --version)"
-
-# Template for CI setup script preparation
-.prepare_template: &prepare_template
-  prepare_script:
-    - |
-      # Install Homebrew if needed
       if ! command -v brew &>/dev/null; then
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
         [[ "$(uname -m)" == "arm64" ]] && eval "$(/opt/homebrew/bin/brew shellenv)"
       fi
 
-      # Install ShellCheck
+# Template for preparing environment
+.prepare_environment_template: &prepare_environment_template
+  prepare_environment_script:
+    - |
+      # Install required tools
       brew install shellcheck
 
-      # Ensure script is executable
-      chmod +x ci_modifiers.sh
+      # Set up environment variables consistently
+      export ZDOTDIR="${HOME}"
+      export ANTIDOTE_HOME="${HOME}/.antidote"
 
-      # Run the CI modifiers script directly in zsh
-      # This generates ci_setup.sh without needing to source functions
-      zsh ./ci_modifiers.sh
+      # Create necessary directories
+      mkdir -p "${ZDOTDIR}"
+      mkdir -p "${ANTIDOTE_HOME}"
 
-      # Verify the script was created successfully
-      if [[ ! -f ci_setup.sh ]]; then
-        echo "Failed to generate ci_setup.sh"
-        exit 1
+      # Create .zsh_plugins.txt in the correct location
+      if [[ ! -f "${ZDOTDIR}/.zsh_plugins.txt" ]]; then
+        echo "Creating .zsh_plugins.txt in ${ZDOTDIR}"
+        {
+          echo "# Core functionality"
+          echo "zsh-users/zsh-completions"
+          echo "zsh-users/zsh-autosuggestions"
+          echo "zsh-users/zsh-syntax-highlighting"
+          echo ""
+          echo "# Git integration"
+          echo "ohmyzsh/ohmyzsh path:plugins/git"
+          echo ""
+          echo "# Kubernetes tools"
+          echo "ohmyzsh/ohmyzsh path:plugins/kubectl"
+        } > "${ZDOTDIR}/.zsh_plugins.txt"
+        echo "Created .zsh_plugins.txt successfully"
       fi
 
-      # Make the generated script executable
-      chmod +x ci_setup.sh
-
-      # Validate the generated ci_setup.sh script
-      echo "Validating generated ci_setup.sh script..."
-      shellcheck -s bash \
-        --external-sources \
-        --source-path=SCRIPTDIR \
-        --source-path="${PWD}/lib" \
-        --source-path="${HOME}" \
-        --exclude=SC1091,SC2296,SC2034,SC2154,SC2016 \
-        ci_setup.sh
-      echo "ci_setup.sh validation complete."
-
-# Template for creating test script
-.create_test_template: &create_test_template
-  create_test_script:
-    - |
-      # Ensure verification script is executable
+      # Make scripts executable
+      chmod +x setup.sh
       chmod +x verify_setup.sh
 
-      # Create .zsh_plugins.txt for antidote if it doesn't exist
-      if [[ ! -f ~/.zsh_plugins.txt ]]; then
-        mkdir -p ~/.antidote
-        # Create plugins file using echo commands to avoid heredoc issues
-        echo "# Core functionality" > ~/.zsh_plugins.txt
-        echo "zsh-users/zsh-completions" >> ~/.zsh_plugins.txt
-        echo "zsh-users/zsh-autosuggestions" >> ~/.zsh_plugins.txt
-        echo "zsh-users/zsh-syntax-highlighting" >> ~/.zsh_plugins.txt
-        echo "" >> ~/.zsh_plugins.txt
-        echo "# Git integration" >> ~/.zsh_plugins.txt
-        echo "ohmyzsh/ohmyzsh path:plugins/git" >> ~/.zsh_plugins.txt
-        echo "" >> ~/.zsh_plugins.txt
-        echo "# Kubernetes tools" >> ~/.zsh_plugins.txt
-        echo "ohmyzsh/ohmyzsh path:plugins/kubectl" >> ~/.zsh_plugins.txt
-        echo "Created default .zsh_plugins.txt for antidote"
-      fi
-
-# Template for running the setup
+# Template for running setup
 .setup_template: &setup_template
   setup_script:
     - |
-      # Set up completion system environment
-      export COMPLETION_DIR="${HOME}/.zsh/completions"
-      export ZCOMPCACHE="${HOME}/.zcompcache"
-      export ZCOMPDUMP="${ZCOMPCACHE}/zcompdump"
-      export ANTIDOTE_HOME="${HOME}/.antidote"
+      # Run the setup script
+      zsh ./setup.sh 2>&1 | tee /tmp/cirrus-build.log
 
-      # Ensure brew is in PATH for Apple Silicon
-      [[ "$(uname -m)" == "arm64" ]] && \
-        eval "$(/opt/homebrew/bin/brew shellenv)"
-
-      # Install antidote if using it
-      if grep -q "antidote" setup.sh; then
-        brew install antidote
-      fi
-
-      # Create necessary directories for completions
-      mkdir -p "${COMPLETION_DIR}"
-      mkdir -p "${ZCOMPCACHE}"
-
-      # Run the setup script with CI-specific environment
-      zsh ./ci_setup.sh
-
-      # Verify OrbStack installation without starting it
-      if command -v orbctl >/dev/null 2>&1; then
-        echo "Verifying OrbStack installation..."
-        echo "OrbStack version: $(orbctl version)"
-        echo "Note: OrbStack initialization is skipped in CI due to nested virtualization limitations"
-      fi
-
-      # Show installed package versions
-      echo "=== Installed Versions ==="
-      command -v brew && brew --version
-      command -v git && git --version
-      command -v antidote && antidote --version || \
-        echo "antidote has no version command"
-      command -v rbenv && rbenv --version
-      command -v pyenv && pyenv --version
-      command -v terraform && terraform --version
-      command -v starship && starship --version
-      command -v orbctl && orbctl version
-
-# Template for verification
+# Template for running verification
 .verify_template: &verify_template
-  verify_script: |
-    # Ensure HOME is set correctly for CI environment
-    export HOME="/Users/admin"
-    export COMPLETION_DIR="${HOME}/.zsh/completions"
-    export ZCOMPCACHE="${HOME}/.zcompcache"
-    export ZCOMPDUMP="${ZCOMPCACHE}/zcompdump"
-    export ANTIDOTE_HOME="${HOME}/.antidote"
-    export ZDOTDIR="${HOME}"
-
-    # Switch to zsh for the entire verification process
-    zsh -c '
-      set -e
-      export HOME="/Users/admin"
-      export COMPLETION_DIR="${HOME}/.zsh/completions"
-      export ZCOMPCACHE="${HOME}/.zcompcache"
-      export ZCOMPDUMP="${ZCOMPCACHE}/zcompdump"
-      export ANTIDOTE_HOME="${HOME}/.antidote"
-      export ZDOTDIR="${HOME}"
-      export QUIET_MODE=false
-      mkdir -p "${COMPLETION_DIR}"
-      mkdir -p "${ZCOMPCACHE}"
-      autoload -Uz compinit
-      compinit -d "${ZCOMPDUMP}"
-      fpath=("${COMPLETION_DIR}" $fpath)
-      if [[ -e "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh" ]]; then
-        source "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh"
-        antidote load "${ZDOTDIR}/.zsh_plugins.txt"
-      fi
-      source "${ZDOTDIR}/.zshrc" || { echo "Failed to source ${ZDOTDIR}/.zshrc"; exit 1; }
-      ./verify_setup.sh
-      exit_status=$?
-      exit $exit_status
-    '
+  verify_script:
+    - |
+      # Run verification script
+      source ~/.zshrc
+      ./verify_setup.sh 2>&1 | tee verify.log
 
 # Template for artifact collection
 .artifacts_template: &artifacts_template
   always:
-    logs_artifacts:
-      path: "*.log"
+    build_log_artifacts:
+      path: "/tmp/cirrus-build.log"
       type: text/plain
-    shell_artifacts:
+    zshrc_artifacts:
       path: "~/.zshrc"
       type: text/plain
     plugins_artifacts:
       path: "~/.zsh_plugins.txt"
+      type: text/plain
+    verify_log_artifacts:
+      path: "verify.log"
       type: text/plain
 
 # Daily scheduled validation build
@@ -232,8 +116,8 @@ daily_validation_task:
 
   # Include all configurations using templates
   <<: [*macos_instance_template, *clone_template,
-       *prepare_template, *create_test_template, *setup_template,
-       *verify_template, *artifacts_template]
+       *install_homebrew_template, *prepare_environment_template,
+       *setup_template, *verify_template, *artifacts_template]
 
 # Task for testing the setup script on macOS ARM (on-demand)
 macos_arm_test_task:
@@ -241,5 +125,5 @@ macos_arm_test_task:
 
   # Include common configurations using templates
   <<: [*macos_instance_template, *clone_template,
-       *shellcheck_template, *prepare_template, *create_test_template,
+       *install_homebrew_template, *prepare_environment_template,
        *setup_template, *verify_template, *artifacts_template]
