feat: standardize CI output formatting and improve error handling consistency - Implement consistent [SKIPPED] message format with (reason) across all scripts - Fix double status reporting in completion checks causing confusing output - Make completion failures in CI non-critical to prevent unnecessary build failures - Add environment-aware testing that gracefully handles CI limitations - Add comprehensive CI output standardization documentation to README.md - Implement Documentation Maintenance Requirements in Cursor rules - Remove legacy MCP configuration file references causing warnings - Standardize color coding: YELLOW for skipped, BLUE for info, GREEN for success, RED for errors - Improve CI log readability with clean tree-structure formatting and clear test categorization

--- a/mcp_server_registry.yml
+++ b/mcp_server_registry.yml
@@ -78,6 +78,6 @@ servers:
 # Global MCP configuration
 global:
   build_directory: "./mcp_builds"
-  config_path: "${HOME}/.config/mcp"
+  # config_path: Legacy - now using --env-file approach
   network_name: "mcp-network"
   default_timeout: 30
