fix: resolve CI output debug issues and enhance error handling - Fix CI shell initialization errors by suppressing .zshrc loading errors - Add CI Environment Standards to .cursorrules for clean output requirements - Fix exit code preservation in mcp_manager.sh inspect command - Enhance debugging output filtering and error handling patterns - Update mandatory cleanup protocol with CI output validation

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -88,8 +88,8 @@ env:
 .verify_template: &verify_template
   verify_script:
     - |
-      # Run verification script
-      source ~/.zshrc
+      # Run verification script (suppress shell init errors in CI)
+      source ~/.zshrc 2>/dev/null || true
       ./verify_setup.sh 2>&1 | tee verify.log
 
 # Template for artifact collection
