feat: add Filesystem MCP Server integration with comprehensive testing - Add filesystem server to mcp_server_registry.yml with secure directory access controls - Implement environment variable handling for FILESYSTEM_ALLOWED_DIRS with default paths - Update configuration generation to include filesystem server in both Cursor and Claude configs - Add comprehensive test coverage ensuring all filesystem functionality works correctly - Update documentation with filesystem server features and security considerations - Follow TDD methodology with all 48 tests passing including filesystem integration

--- a/mcp_server_registry.yml
+++ b/mcp_server_registry.yml
@@ -79,6 +79,28 @@ servers:
       - "configuration_export"
       - "cli_mode"
 
+  filesystem:
+    name: "Filesystem MCP Server"
+    description: "Official Anthropic filesystem operations server for local file management"
+    category: "filesystem"
+    source:
+      type: registry
+      image: "mcp/filesystem:latest"
+    environment_variables:
+      - "FILESYSTEM_ALLOWED_DIRS"
+    health_test:
+      parse_mode: json
+      path: "/health"
+      expected_status: 200
+      expected_response:
+        status: "ok"
+    capabilities:
+      - "file_operations"
+      - "directory_management"
+      - "file_search"
+      - "file_metadata"
+      - "secure_access"
+
   # Future servers (commented for future expansion):
   # figma:
   #   name: "Figma MCP Server"
