refactor: standardize directory structure and cleanup temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ Temporary Items
 *.temp
 logs/
 temp/
-tmp/
 
 # Backup files
 *.bak
@@ -64,5 +63,7 @@ setup.sh.ci
 
 # MCP Build artifacts
 mcp_builds/
-test_home/
 .sct_changes
+
+# Temporary directories - organized under ./tmp/
+tmp/
