remove: Cirrus CI integration and add development_history.md to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ mcp_builds/
 
 # Temporary directories - organized under ./tmp/
 tmp/
+
+# Development history (local development notes)
+development_history.md
