--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,11 @@ repos:
       - id: yamllint
         args: ["-c", ".yamllint.yaml"]
 
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.27.0
+    hooks:
+      - id: gitleaks
+
   - repo: local
     hooks:
       - id: shellspec-tests
